// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders associatedClassesSelection view correctly 1`] = `
<div>
  <Connect(Component) />
</div>
`;

exports[`Search renders correctly 1`] = `
<div>
  <React.Fragment>
    <Connect(Component) />
    <Connect(Component) />
  </React.Fragment>
</div>
`;

exports[`Search renders sectionSelection view correctly 1`] = `
<div>
  <Connect(Component) />
</div>
`;
